update dockerization
